# tinyexpr-rs

./: Cargo.toml  README.md
examples/: example.rs  tinyexpr.rs
src/: error.rs  lib.rs
tests/: lib.rs
